syntax = "proto3";
package brume.v1;

option go_package = "brume.dev/internal/gen/proto/brume/v1";

import "brume/v1/base.proto";

message User {
  string id = 1;
  string name = 2;
}

service UserService { rpc GetMe(Empty) returns (User); }

service Authentification {
  rpc PasswordLogin(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse { string token = 1; }
